tests/e2e/complex_nested_expression14.story
d = {"a": 2}
((0 == 1)) + (d["a"])
